--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "async": ">=2.6.4"
   },
   "scripts": {
     "predeploy": "npm run build",
